--- a/style.css
+++ b/style.css
@@ -118,9 +118,12 @@ nav ul li a:hover {
 .perkenalan h1 {
     margin-top: 100px;
     text-align: center;
-    line-height: 40px;
+    /* line-height: 40px;
     color: white;
-    filter: drop-shadow(2px 2px 1px black);
+    filter: drop-shadow(2px 2px 1px black); */
+    color: transparent;
+    -webkit-text-stroke-color: white;
+    -webkit-text-stroke: 1px white;
 }
 
 .perkenalan p {
@@ -162,7 +165,7 @@ nav ul li a:hover {
 
 /*about*/
 .about {
-    background-color: #ff5500;
+    background-image: linear-gradient(#800080, #ffa500);
     width: 100%;
     height: 100vh;
     position: relative;
@@ -357,7 +360,7 @@ nav ul li a:hover {
 
 
 .portfolio {
-    height: 200vh;
+    height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgb(77, 77, 134), #6b6868);
     position: relative;
@@ -375,7 +378,6 @@ nav ul li a:hover {
     gap: 10px;
     justify-content: space-around;
     align-content: center;
-
 }
 
 .blob2 {
